fix bug button cancel & save, add dark mode

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @import './base.css';
+/* @import './base.css'; */
 
-#app {
+/* #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
